--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="w-100 d-flex justify-content-center">
             <form>
                 <div class="d-flex">
-                    <input type="text" id="luckyNum" value="123456" class="form-control" placeholder="Input the lucky numbers">
+                    <input type="text" id="luckyNum" class="form-control" placeholder="Input the lucky numbers">
                     <button type="button" id="calculate" class="btn btn-danger">Calculate</button>
                 </div>
             </form>
@@ -55,21 +55,6 @@
         </section>
 
         <section class="d-flex flex-column mt-2 w-100 align-items-center justify-content-center" id="guess">
-            <div class="w-75 d-flex justify-content-between">
-                <p class="names">Fidelis</p>
-                <p class="matched"><span class="match">0</span> Matched</p>
-                <p class="nums">432899</p>
-            </div>
-            <div class="w-75 d-flex justify-content-between">
-                <p class="names">Adams</p>
-                <p class="matched"><span class="match">0</span> Matched</p>
-                <p class="nums">037589</p>
-            </div>
-            <div class="w-75 d-flex justify-content-between">
-                <p class="names">Favour</p>
-                <p class="matched"><span class="match">0</span> Matched</p>
-                <p class="nums">034589</p>
-            </div>
         </section>
 
         <section class="d-flex justify-content-between mx-5">
