--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 
-    <main class="p-2 py-5 bg-white">
-        <section class="w-100 d-flex vh-sm-100 justify-content-center mb-4">
+    <main class="p-2 py-5">
+        <section class="w-100 d-flex justify-content-center mb-4">
             <h1>RiskyAm!</h1>
         </section>
 
